--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ keywords = ["event", "event-sourcing"]
 categories = ["data-structures"]
 
 [dependencies]
+async-channel = "2.1.0"
 chrono = "0.4.31"
 derive_more = { version = "1.0.0-beta.6", features = ["display", "index"] }
-futures = "0.3.29"
+futures = { version = "0.3.29", features = ["thread-pool"] }
