--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,8 @@ async-channel = "2.1.0"
 chrono = "0.4.31"
 derive_more = { version = "1.0.0-beta.6", features = ["display", "index"] }
 futures = { version = "0.3.29", features = ["thread-pool"] }
+futures-locks = "0.7.1"
+thiserror = "1.0.50"
+
+[features]
+backtrace = []
