--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ async-channel = "2.1.0"
 derive_more = { version = "1.0.0-beta.6", features = ["display", "index"] }
 futures = { version = "0.3.29", features = ["thread-pool"] }
 futures-locks = "0.7.1"
+impl-tools = "0.10.0"
 thiserror = "1.0.50"
 
 [features]
