--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -4,7 +4,15 @@ error_on_line_overflow = true
 use_small_heuristics = "Max"
 
 # Line-breaks
-imports_layout = "HorizontalVertical"
 wrap_comments = true
 fn_single_line = true
 overflow_delimited_expr = true
+inline_attribute_width = 80
+
+# imports
+group_imports = "StdExternalCrate"
+imports_granularity = "Module"
+imports_layout = "HorizontalVertical"
+
+# misc
+use_field_init_shorthand = true
