--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "event_sourcing"
+name = "occur"
 version = "0.1.0"
 description = "TBD"
-repository = "https://github.com/bayov/event_sourcing"
+repository = "https://github.com/bayov/occur"
 readme = "README.md"
 license = "PRIVATE"
 edition = "2021"
@@ -23,3 +23,4 @@ backtrace = []
 
 [dev-dependencies]
 rstest = "0.18.2"
+uuid = { version = "1.6.1", features = ["v7"] }
