--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,11 @@ readme = "README.md"
 license = "PRIVATE"
 edition = "2021"
 keywords = ["event", "event-sourcing"]
-categories = ["data-structures"]
+categories = []
 
 [dependencies]
 async-channel = "2.1.0"
 derive_more = { version = "1.0.0-beta.6", features = ["display"] }
-futures = { version = "0.3.29", features = ["thread-pool"] }
 futures-locks = "0.7.1"
 indoc = "2.0.4"
 thiserror = "1.0.50"
@@ -21,5 +20,7 @@ thiserror = "1.0.50"
 backtrace = []
 
 [dev-dependencies]
+futures = { version = "0.3.29", features = ["thread-pool"] }
+grcov = "0.8.19"
 rstest = "0.18.2"
 uuid = { version = "1.6.1", features = ["v7"] }
