--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 license = "PRIVATE"
 edition = "2021"
 keywords = ["event", "event-sourcing"]
-categories = []
+categories = ["database"]
 
 [dependencies]
 async-channel = "2.1.0"
