Fiddle with scylla

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,13 @@ futures-locks = "0.7.1"
 indoc = "2.0.4"
 thiserror = "1.0.50"
 
-[dev-dependencies]
+# TODO: remove to a separate crate
+anyhow = "1.0.79"
 color-backtrace = "0.6.1"
+scylla = "0.11.1"
+tokio = { version = "1.35.1", features = ["rt-multi-thread"] }
+
+[dev-dependencies]
 grcov = "0.8.19"
 rstest = "0.18.2"
 uuid = { version = "1.6.1", features = ["v7"] }
