--- a/occur/Cargo.toml
+++ b/occur/Cargo.toml
@@ -10,13 +10,13 @@ keywords = ["event", "event-sourcing"]
 categories = ["database"]
 
 [dependencies]
-derive_more = { version = "1.0.0-beta.6", features = ["display"] }
-futures = { version = "0.3.29", features = ["thread-pool"] }
+derive_more = { version = "1.0.0-beta.6", default-features = false, features = ["display"] }
+futures = { version = "0.3.30", features = ["thread-pool"] }
 futures-locks = "0.7.1"
-indoc = "2.0.4"
-thiserror = "1.0.50"
+indoc = "2.0.5"
+thiserror = "1.0.63"
 
 [dev-dependencies]
 grcov = "0.8.19"
-rstest = "0.18.2"
-uuid = { version = "1.6.1", features = ["v7"] }
+rstest = "0.21.0"
+uuid = { version = "1.10.0", features = ["v7"] }
